Use php-blossom as a dependency rather than copy and pasting it in
This will allow us to get the (very minor) bug fixes since we first copied and
also stop the static checkers complaining about code style there.

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "mustache/mustache": "^2.14",
         "monolog/monolog": "^3.7",
         "symfony/dom-crawler": "^6.4",
-        "symfony/css-selector": "^6.4"
+        "symfony/css-selector": "^6.4",
+        "bakert/blossom-php": "^1.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
