--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "monolog/monolog": "^3.7",
         "symfony/dom-crawler": "^6.4",
         "symfony/css-selector": "^6.4",
-        "bakert/blossom-php": "^1.0"
+        "bakert/blossom-php": "^1.0",
+        "stefangabos/zebra_pagination": "^2.4"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
