Refactor Db to use a helper func and instance methods not static methods
You now call the database like this:

    db()->createDatabase('test_db');
    db()->execute('CREATE TABLE my_table (id INT)');
    db()->insert('INSERT INTO my_table (id) VALUES (1)');
    $id = db()->ints('SELECT id FROM my_tables');
    ...

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
             "Gatherling\\Tests\\": "tests/"
         },
         "files": [
-            "gatherling/Helpers/helpers.php"
+            "gatherling/Helpers/helpers.php",
+            "gatherling/Helpers/database.php"
         ]
     }
 }
