--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,14 @@
 {
     "name": "pennydreadfulmagic/gatherling",
     "description": "Magic the Gathering tournament software",
-	"version": "5.1.0",
+    "version": "5.1.0",
     "scripts": {
+        "check": ["@tests", "@static", "@lint", "@jstests"],
         "tests": "vendor/bin/phpunit --stop-on-defect tests",
         "lint": "vendor/bin/phpcs -d memory_limit=2G --runtime-set testVersion 8.1 .",
         "autofix": "vendor/bin/phpcbf -d memory_limit=2G --runtime-set testVersion 8.1 .",
-		"static": "vendor/bin/phpstan --memory-limit=2G && vendor/bin/psalm --no-cache",
-		"jstests": "bun test"
+        "static": "vendor/bin/phpstan --memory-limit=2G && vendor/bin/psalm --no-cache",
+        "jstests": "bun test"
     },
     "require": {
         "php": "8.1.*",
