Eliminate as many references to global $CONFIG as possible without removing
This should probably be done via environment variables but for now just reduce
the surface of it as much as possible. All access via config() helper func.

--- a/gatherling/config.php.example
+++ b/gatherling/config.php.example
@@ -41,4 +41,8 @@ $CONFIG['infobot_passkey'] = "";
 # Put your unique key here
 $CONFIG['infobot_prefix'] = "";
 
+# Discord OAuth
+$CONFIG['DISCORD_CLIENT_ID'] = '';
+$CONFIG['DISCORD_CLIENT_SECRET'] = '';
+
 # THAT'S ALL FOLKS!
