Add a dump autoload step to CI
Sometimes we need this, it might as well be a permanent fixture as it is fast
and can't really do any harm.

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -45,6 +45,8 @@ jobs:
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
       run: composer install --prefer-dist --no-progress
+    - name: Regenerate Autoloader
+      run: composer dump-autoload
     - run: cp gatherling/config.php.github gatherling/config.php
     - run: php gatherling/admin/db-upgrade.php
     - run: php gatherling/insertcardset.php M10
